SOC-3557 | Social Unit Testing is slowness with lack of heap memory